    - Modify the MSCommon internal-use only debug logging records to contain the correct relative
      file path when the debug function is called from outside the MSCommon module.

  From William Deegan:
    - Fix yacc tool, not respecting YACC set at time of tool initialization.
    - Refactor SCons.Tool to move all common shared and loadable module linking logic to SCons.Tool.linkCommon

  From Michał Górny:
    - Fix dvipdf test failure due to passing incorrect flag to dvipdf.

  From Adam Gross:
    - Fix minor bug affecting SCons.Node.FS.File.get_csig()'s usage of the MD5 chunksize.
      User-facing behavior does not change with this fix (GH Issue #3726).

  From Joachim Kuebart:
    - Suppress missing SConscript deprecation warning if `must_exist=False`
      is used.

  From Rocco Matano:
    - Fix Zip tool to respect ZIPCOMSTR. Previously all zip builder calls would yield something
      like zip(["test.zip"], ["zip_scons.py"]) and ignore ZIPCOMSTR if ZIPCOM and ZIPCOMSTR
      weren't set after the Environment/Tool is initialized. (Explained in PR #3659)

  From Daniel Moody:
    - Fix issue where java parsed a class incorrectly from lambdas used after a new.

  From Mats Wichmann:
    - Complete tests for Dictionary, env.keys() and env.values() for
      OverrideEnvironment. Enable env.setdefault() method, add tests.
    - Raise an error if an option (not otherwise consumed) is used which
      looks like an abbreviation of one one added by AddOption. (#3653)
    - Tool module not found will now raise a UserError to more clearly indicate this is
      probably an SConscript problem, and to make the traceback more relevant.
    - Fix three issues with MergeFlags: 
      - Signature/return did not match documentation or existing usage - the implementation 
        now no longer returns the passed env
      - merging --param arguments did not work (issue #3107); 
      - passing a dict to merge where the values are strings failed (issue #2961).