@@ -42,7 +42,6 @@ zip_safe = False
 python_requires = >=3.5
 install_requires =
     setuptools
-    pywin32 >= 1.0;platform_system=="Windows"
 
 setup_requires = setuptools
 include_package_data = True
