@@ -17,6 +17,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
   From William Deegan:
     - Fix yacc tool, not respecting YACC set at time of tool initialization.
     - Refactor SCons.Tool to move all common shared and loadable module linking logic to SCons.Tool.linkCommon
+    - Remove pywin32 imports from SCons.Script.Main. No longer needed.
+    - pywin32 no longer necessary for SCons install. (pip install SCons will no longer also require pywin32 on win32)
 
   From Michał Górny:
     - Fix dvipdf test failure due to passing incorrect flag to dvipdf.
